# Jacc-v2

./: .gitignore  main.py  pyproject.toml
docs/: presentation_high_level.md
docs/extracted_texts/: 2304.09048v2.txt  2310.06770v3.txt  2404.00599v1.txt  2406.07003v2.txt  2408.03910v2.txt  2411.11532v3.txt  2503.21710v3.txt  2505.14394v1.txt  2511.07584v1.txt  2603.07326v1.txt  2603.21430v2.txt
docs/paper_analyses/: 2304.09048_CodeKGC.md  2310.06770_SWE-Bench.md  2404.00599_EvoCodeBench.md  2406.07003_GraphCoder.md  2408.03910_CodeXGraph.md  2411.11532_CKGFuzzer.md  2503.21710_KGCompass.md  2505.14394_KG_Code_Generation.md  2511.07584_SemanticForge.md  2603.07326_Echo.md  2603.21430_DomAgent.md  QUICK_REFERENCE.md  SYNTHESIS_MASTER.md
docs/paper_analyses_vi/: 2304.09048_CodeKGC.md  2310.06770_SWE-Bench.md  2404.00599_EvoCodeBench.md  2406.07003_GraphCoder.md  2408.03910_CodeXGraph.md  2411.11532_CKGFuzzer.md  2503.21710_KGCompass.md  2505.14394_KG_Code_Generation.md  2511.07584_SemanticForge.md  2603.07326_Echo.md  2603.21430_DomAgent.md  QUICK_REFERENCE.md  SYNTHESIS_MASTER.md
src/: main.py
src/modules/graph/: types.py
src/modules/repo-explorer/: architecture.txt
src/modules/repo-explorer/graph/: README.md
src/modules/repo_explorer/: README.md  config.py  docs.md
src/modules/repo_explorer/discovery/: content_filter.py  filesystem_walker.py
tests/: print_ast_node.py  run_extraction_pipeline.py  run_infile_processor.py  test_extraction_core.py  test_extraction_pipeline.py  test_infile_processor.py  test_main_pipeline.py
(+75 files in other folders)
