[project]
name = "ckg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kuzu>=0.11.3",
    "pathspec>=1.1.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-ada>=0.1.0",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-commonlisp>=0.4.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-fortran>=0.6.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-matlab>=1.3.0",
    "tree-sitter-objc>=3.0.2",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-scala>=0.26.0",
    "tree-sitter-solidity>=1.2.13",
    "tree-sitter-swift>=0.7.2",
    "tree-sitter-typescript>=0.23.2",
]
